2010-06-11  Peter Juhasz

	* src/graphics.c (boundary):  More correct fix for distorted
	vertical size of subplots in a multiplot.

2010-06-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary):  Fix a type that can distort the
	vertical size of subplots in a multiplot.

2010-06-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (need_fill_border): The fillstyle border color was not
	taking account of linetype redefinitions.
	
2010-05-30  Ethan A Merritt  <merritt@u.washington.edu>
	
	* docs/gnuplot.doc:  Document recently added %s time format
	(seconds since start of 2000).

2010-05-24  Ethan A Merritt  <merritt@u.washington.edu>
	
	* src/graph3d.c (do_3dplot):  Remove a restriction that limited depth-
	sorting of pm3d surfaces to those which were adjacent in the splot
	command.  If there was a reason for the original restriction, that 
	reason is now not remembered.
	Bug #3004793

2010-05-23  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm: Revise the enhanced text mode, especially text rotation.

2010-05-22  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm (CANVAS_graphics ENHCANVAS_FLUSH):
	Fix a bug in applying the baseline of rotated enhanced text.
	Provide a dummy gnuplot_init() routine if a standalone html
	file with no mouse support is created.

2010-05-20  Ethan A Merritt  <merritt@u.washington.edu>

	* term/estimate.trm (ENHest_writec strlen_utf8)
	src/term.c (estimate_strlen):

	Teach estimate_strlen() to handle UTF-8 encoded strings.  The estimate
	is imperfect, but then again the estimate is already imperfect for any
	proportional font.  To truly do this more accurately would require
	customized implementations for each terminal type.  Any unicode code
	point below 0x3000 is treated as requiring one character width; code
	points above 0x3000 are treated as requiring two character widths.

2010-05-16  Ethan A Merritt  <merritt@u.washington.edu>
