@@ -1,3 +1,8 @@
+2010-06-15  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/datafile.c: Do not allow xticlabels(foo) in association with
+	style BOXPLOT, since there are no x coordinates.
+
 2010-06-11  Peter Juhasz
 
 	* src/graphics.c (boundary):  More correct fix for distorted
